Fixed grid spacing on home.

--- a/assets/styles/pages/_archive-event.scss
+++ b/assets/styles/pages/_archive-event.scss
@@ -13,6 +13,7 @@
     .entry {
         @extend %grid-col;
         padding: 1em;
+        margin-bottom: .5em;
         background-color: $color__white;
         text-align: center;
         transition: transform .2s ease-in-out;
